# budget2025-rag

./: .dockerignore  .envrc.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  load_env.sh  pyproject.toml
app/: chat_engine.py  db.py  embeddings.py  main.py  tracing.py  vectors.py
data/: questions.json
notebooks/: chat.ipynb  docker-compose.yml  eval.ipynb  index.ipynb  qa_with_reference_df.csv  rag_evaluation_dataframe.csv
