[project]
name = "budget2025-rag"
version = "0.1.0"
description = "Budget 2025 RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core>=0.12.30",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-vector-stores-postgres>=0.4.2",
    "mistralai>=1.6.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.6"]
